# AI-Powered-Disaster-Response-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.ipynb_checkpoints/: api_notebook-checkpoint.ipynb
disaster-ai/models/cv/: resnet18_xbd_binary_meta.json  resnet18_xbd_multiclass_meta.json
disaster-ai/models/seg/: unet_xbd_seg.pt
disaster-ai/outputs/inference/: preds_20250924_154745.csv
disaster-ai/src/: cv_dataset.py  cv_train.py
disaster-ai/src/.ipynb_checkpoints/: cv_dataset-checkpoint.py
notebooks/: 01_setup_and_training.ipynb  dataset_loader.ipynb  disaster_ai_inference.ipynb  disaster_ai_main.ipynb  step5_multiclass.ipynb  step7_multiclass_training.ipynb  training_set.ipynb
outputs/: batch_predictions.csv  val_mistakes_top.csv  val_predictions.csv
scripts/: app.py  infer.ipynb  train_multiclass.ipynb
