[metadata]
name = disaster-ai
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = AI-Powered Disaster Response & Resource Allocation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/<your-username>/AI_Powered_Disaster_Response
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.extras_require]
dev =
    black
    flake8
    pytest
